<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layoutDirection="ltr"
    android:layout_marginRight="40dp">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/calendar"
        android:layout_marginTop="45dp"
        android:id="@+id/calander"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/title"
        android:layout_height="wrap_content"
        android:text="@string/borrowing_form"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_below="@id/calander"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_name"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:id="@+id/book_title"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:hint="@string/f_name"
        android:textStyle="bold"
        android:layout_marginTop="80dp"/>


    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fname"
        android:hint="@string/l_name"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>



    <EditText
        android:id="@+id/phonenum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lname"
        android:hint="@string/f_number"
        android:inputType="number"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>



    <TextView
        android:id="@+id/take_date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phonenum"
        android:hint="@string/borrow_d"
        android:inputType="date"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        />


    <Button
        android:id="@+id/return_date_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/take_date"
        android:hint="@string/return_d"
        android:inputType="date"
        android:textStyle="bold"
        android:backgroundTint="#4AC4D8"
        android:layout_marginTop="30dp"
       />

    <Button
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_below="@+id/return_date_btn"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_borrow"
        android:layout_marginTop="40dp"
        android:text="@string/done"
        android:backgroundTint="#4AC4D8"
        android:textColor="@color/white"
        android:textStyle="bold"/>
</RelativeLayout>
</androidx.core.widget.NestedScrollView>