<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layoutDirection="ltr"
    android:layout_marginRight="40dp">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/add"
        android:layout_marginTop="45dp"
        android:id="@+id/add"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_book"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_below="@id/add"
        android:layout_centerHorizontal="true"
        />


    <TextView
        android:id="@+id/book_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/add"
        android:hint="@string/book_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="200dp"/>


    <EditText
        android:id="@+id/author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_name"
        android:hint="@string/book_author"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>


    <EditText
        android:id="@+id/summery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author"
        android:hint="@string/summery"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_below="@+id/summery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/cancel"
        android:id="@+id/cancel_btn"
        android:backgroundTint="#4AC4D8"
        android:textColor="@color/white"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_below="@+id/summery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/save"
        android:backgroundTint="#4AC4D8"
        android:textColor="@color/white"
        android:id="@+id/save_btn"
        android:layout_alignParentRight="true"
        android:textStyle="bold"/>
</RelativeLayout>
</androidx.core.widget.NestedScrollView>