<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="40dp"
    android:layoutDirection="ltr"
    android:layout_marginRight="40dp">

<RelativeLayout

    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/afterstatus"
        android:layout_marginTop="45dp"
        android:id="@+id/afterstatus"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_title"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_below="@id/afterstatus"
        android:layout_centerHorizontal="true"
        />


    <TextView

        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/afterstatus"
        android:text="@string/f_name"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_marginTop="100dp"/>


    <TextView
        android:id="@+id/book_name"
        android:text="@string/book_name"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fullname"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        />


    <TextView
        android:id="@+id/returndate"
        android:text="@string/return_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"/>



    <Button
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:id="@+id/send_sms_btn"
        android:layout_below="@+id/returndate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:text="@string/send_sms"
        android:backgroundTint="#4AC4D8"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentRight="true"/>


    <Button
        android:id="@+id/changeDate"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_below="@+id/returndate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:hint="@string/change_d"
        android:backgroundTint="#4AC4D8"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"/>


</RelativeLayout>
</androidx.core.widget.NestedScrollView>